migrate to aws sdk v2